--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "ChaabenGroup",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.3",
