--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.3",
-    "mongoose": "^5.2.8"
+    "mongoose": "^5.13.17",
+    "morgan": "^1.10.0"
   }
 }
